# cpp_game_demo

./: CMakeLists.txt  README.md
include/: game.h  main.h
src/: main.cpp
src/engine/: game.cpp
